# badifrei

./: .dockerignore  .env.example  .gitignore  Makefile  PRD.md  README.md  SEO_REVIEW_2026.md  TASKS.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  main.py  predictor.py  schemas.py
api/static/: index.js  llms.txt  pool.js  style.css
api/templates/: base.html  index.html  pool.html
collector/: Dockerfile  config.py  db.py  main.py  ws_client.py
docker/: Dockerfile.collector  init-weather.sql  init.sql
docker/migrations/: 002_hourly_weather.sql
docs/: ARCHITECTURE_REVIEW.md  COOLIFY.md  LLM_SEO_REPORT_2026.md  SECURITY_REVIEW.md  SEO_REPORT.md  SEO_TASKS.md
ml/: Dockerfile  data_loader.py  evaluate.py  features.py  lag_policy.py  pool_metadata.json  predict.py  retrain.py  target_policy.py  train.py  walk_forward.py  weather.py
scripts/: backtest.py  migrate.py  train.py  verify_umami_snippet.py  walk_forward.py
tests/: conftest.py
tests/integration/: test_docker_compose.py
tests/unit/: test_api_scaffold.py  test_collector_main.py  test_config.py  test_data_loader.py  test_data_loader_bucket.py  test_db.py  test_deduplication.py  test_evaluate.py  test_features.py  test_features_seasonal.py  test_lag_policy.py  test_migrate.py  test_opening_hours.py  test_pool_detail_parallel.py  test_pool_metadata.py  test_predictor_batch.py  test_retrain.py  test_retrain_weather.py  test_schema.py  test_target_policy.py  test_train.py  test_weather.py  test_weather_city.py  test_weather_db.py  test_weekly_insights_cache.py  test_ws_client.py
